@@ -19,6 +19,7 @@ package org.apache.lucene.search.spans;
 
 import org.apache.lucene.search.DocIdSetIterator;
 import org.apache.lucene.search.TwoPhaseIterator;
+import org.apache.lucene.search.similarities.Similarity.SimScorer;
 
 import java.io.IOException;
 
@@ -48,6 +49,15 @@ public abstract class Spans extends DocIdSetIterator {
    * After the last start/end position at the current doc this returns {@link #NO_MORE_POSITIONS}.
    */
   public abstract int endPosition();
+
+  /**
+   * Return the width of the match, which is typically used to compute
+   * the {@link SimScorer#computeSlopFactor(int) slop factor}. It is only legal
+   * to call this method when the iterator is on a valid doc ID and positioned.
+   * The return value must be positive, and lower values means that the match is
+   * better.
+   */
+  public abstract int width();
 
   /**
    * Collect postings data from the leaves of the current Spans.
